--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,17 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 10px 0px, rgba(0, 0, 0, 0.19) 0px 4px 20px 0px;
+box-sizing: border-box;
+color: rgb(0, 0, 0);
+display: block;
+font-family: Verdana, sans-serif;
+font-size: 15px;
+height: 291.672px;
+line-height: 1.5px;
+max-width: 250px;
+text-size-adjust: 90%;
+width: 250px;
 }
