--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,43 @@
 .App {
-  text-align: left;
+  text-align: center;
 }
 
-.card{
-box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 10px 0px, rgba(0, 0, 0, 0.19) 0px 4px 20px 0px;
-box-sizing: border-box;
-color: rgb(0, 0, 0);
-display: block;
-font-family: Verdana, sans-serif;
-font-size: 15px;
-height: 291.672px;
-line-height: 1.5px;
-max-width: 250px;
-text-size-adjust: 90%;
-width: 250px;
+.container{
+  width: 100%;
+  max-width: 1200px;
+  height: 430px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+
+}
+.container .card {
+  width: 280px;
+  border-radius: 8px;
+  height: 310px;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin:20px;
+  text-align: center;
+  transition: all 0.25s;
+
+}
+.container .card:hover {
+  transform: translate(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+.container .card img{
+  width: 330px;
+  height: 220px;
+}
+.container .card h1{
+  font-weight: 600;
+
+}
+.container .card p{
+  padding: 0 1rem;
+  font-size: 16px;
+  font-weight: 300;
+
 }
