--- a/src/App.css
+++ b/src/App.css
@@ -3,32 +3,31 @@
 }
 
 .container{
-  width: 100%;
-  max-width: 1200px;
+  width: 280px;
   height: 430px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: auto;
-
+  display: inline-block;
+  max-width: 10000px;
+  max-height: 350px;
+  cursor: pointer;
+  text-shadow: 2px 2px 3px rgba(100,100,100,0.8);
+  box-shadow: 0 1px 1px rgba(0,0,0,0.10);
+  
 }
-.container .card {
+.card {
   width: 280px;
   border-radius: 8px;
   height: 310px;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  margin:20px;
+  margin-top: 5;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+  
+  margin:15px;
   text-align: center;
   transition: all 0.25s;
+  
+}
 
-}
-.container .card:hover {
-  transform: translate(-15px);
-  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
 .container .card img{
-  width: 330px;
+  width: 1000px;
   height: 220px;
 }
 .container .card h1{
