--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,41 @@
 .App {
   text-align: center;
 }
+  .txt{
+    text-align: center;
 
-.container{
-  width: 180px;
-  height: 130px;
-  display: inline-block;
-  max-width: 10px;
-  max-height: 350px;
-  cursor: pointer;
-  text-shadow: 2px 2px 3px rgba(100,100,100,0.8);
-  box-shadow: 0 1px 1px rgba(0,0,0,0.10);
+  }
+ .button-Style {
+ 
+ 
+  width: 200px;
+  height: 50px;
   
-}
-.card {
-  width: 280px;
-  border-radius: 8px;
-  height: 310px;
-  margin-top: 5;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-  
-  margin:15px;
-  text-align: center;
-  transition: all 0.25s;
-  
-}
-
-.container .card img{
-  width: 1000px;
-  height: 220px;
-}
-.container .card h1{
-  font-weight: 600;
-
-}
-.container .card p{
-  padding: 0 1rem;
-  font-size: 16px;
-  font-weight: 300;
-
+  background: #232c3f;
+  border: none;
+  font-size: 10pt;
+  vertical-align: middle;
+  white-space: nowrap;
+  position: absolute;
+  color: #bac2ca;
+  padding-left: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin-left: 0px;
+    margin-top: 30px;
+    margin-left: 10px;
 }
 
-.filter-container {
-  margin: 0 0 20px 0;
+.button-Style:hover, .btn-bootstrap:focus {
+  background-color: #868e99;
 }
+
+.button-Style:active {
+  background-color: #373a46;
+}
+
+.desplazar{
+  margin-top: 100px;
+}
+ 
