Se trabajo en PrizeCards

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 
 .container{
@@ -13,17 +14,13 @@
   box-shadow: 0 1px 1px rgba(0,0,0,0.10);
   
 }
-.card {
-  width: 280px;
+.card_ {
   border-radius: 8px;
-  height: 310px;
   margin-top: 5;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-  
-  margin:15px;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+  margin:1px;
   text-align: center;
-  transition: all 0.25s;
-  
+  transition: all 0.25s;  
 }
 
 .container .card img{
@@ -43,4 +40,27 @@
 
 .filter-container {
   margin: 0 0 20px 0;
+}
+.personal-card {
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.card-container {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 150px);
+  grid-gap: 10px;
+  margin: 30px;
+}
+
+.over-text{
+  position: absolute;
+  top: 13px;
+  margin-left: 20px;
+}
+
+.center{
+  display: inline-block;
 }
