--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,26 @@
 .center{
   display: inline-block;
 }
+
+
+ .ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+ }
+
+ .li {
+  float: left;
+ }
+
+ .link {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin:left;
+ }
+
